sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/Integration__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para registar eventos de integrações.</description>
    <label>Integration</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Integration Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>