sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>External key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>