sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/IntegrationEventName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationEventName__c</fullName>
    <label>Integration event name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>