sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/IntegrationName__c.field-meta.xml
<CustomField>
    <fullName>IntegrationName__c</fullName>
    <description>Nome da integração (ou nome do sistema externo)</description>
    <inlineHelpText>Nome da integração (ou nome do sistema externo)</inlineHelpText>
    <label>Integration name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>