sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Salesforce RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>