sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/RequestBody__c.field-meta.xml
<CustomField>
    <fullName>RequestBody__c</fullName>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>