sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/SalesforceObject__c.field-meta.xml
<CustomField>
    <fullName>SalesforceObject__c</fullName>
    <label>Salesforce object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>