sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/fields/SerializedRequestBody__c.field-meta.xml
<CustomField>
    <fullName>SerializedRequestBody__c</fullName>
    <label>Serialized Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>