sf-to-gcp-pubsub/force-app/main/default/objects/Integration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IntegrationName__c</columns>
    <columns>IntegrationEventName__c</columns>
    <columns>SalesforceObject__c</columns>
    <columns>Status__c</columns>
    <columns>ExternalKey__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>